Version 3.14

* IMPROVEMENT: Added KSI_DataHash memory reuse.

Version 3.13

* IMPROVEMENT: Functionality to request configurations from extender / aggregator.
* IMPROVEMENT: Updated verification tutorial.
* IMPROVEMENT: Verification context initial aggregation level member is deprecated (warning not shown under Windows). The initial aggregation level is adjusted into aggregation hash chain level correction value during signature creation.
* IMPROVEMENT: Set level correction when input hash level is greater than 0.
* IMPROVEMENT: Updated ksi_sign_aggr example.
* BUGFIX: Update publications file client pointer when changinh client.

Version 3.12

2017-03-02 release(3.12.2010)
* BUGFIX: Removed internal http pipeline feature.
* BUGFIX: The example of KSI_DataHash_create in tutorial/t1_signing.md was missing an argument.

2017-02-27 release(3.12.2000)
* IMPROVEMENT: HMAC algorithm configuration support for outgoing and incomming messages.
* IMPROVEMENT: Support for adding doxygen generated html files into rpm and debian package.
* IMPROVEMENT: Added flag --with-default-pdu-version=version to configure script.
* IMPROVEMENT: Improve test support for different PDU version.
* BUGFIX: Fixed KSI_TlvElement nested structure serialization issue.
* IMPROVEMENT: Updated signature verification procedure. Added new error codes.
* IMPROVEMENT: Provide identity information as a list.
* IMPROVEMENT: Function KSI_Signature_getSignerIdentity is deprecated. See KSI_Signature_getAggregationHashChainIdentity for replacement.
* BUGFIX: Corrected medadata request time parsing.
* BUGFIX: Validate list impl pointer before use.
* BUGFIX: Cryptoapi KSI_PKISignature_new fails if the input blob can not be parsed.
* BUGFIX: CryptoAPI uses PKCS7 signatures embedded intermediate certificates in verification process.
* IMPROVEMENT: Internally HTTP connections are reused and pipelined.
* IMPROVEMENT: Increased the size of the statically allocated KSI_Integer pool up to the value of 0xff.